Fixed theme, made closing tags with attributes ore readable. (preperation for pretty output)

--- a/css/theme.css
+++ b/css/theme.css
@@ -59,7 +59,6 @@ h1, h2 {
 }
 
 #navigation p {
-    position: relative;
     color: black;
     text-decoration: underline;
     float: center;
